Loki-Stack/kubernetes/grafana/manifests/05-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  labels:
    app: grafana
  annotations:
    ingress.cilium.io/loadbalancer-mode: 'shared'
    ingress.cilium.io/service-type: 'Loadbalancer'
spec:
  ingressClassName: 'cilium'
  rules:
  - host: grafana.magedu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
